<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time_recording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_clock"
        android:textSize="60sp"
        android:gravity="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_record_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time_recording"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/record_btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:textColor="@color/orange"
            android:text="REC"
            android:gravity="center"/>

        <Button
            android:id="@+id/pause_btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:textColor="@color/orange"
            android:text="PAUSE"
            android:gravity="center"/>

        <Button
            android:id="@+id/stop_btn_rec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:textColor="@color/orange"
            android:text="STOP"
            android:gravity="center"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/record"
        app:layout_constraintEnd_toStartOf="@+id/play_btn"
        app:layout_constraintTop_toBottomOf="@id/time_recording" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/record_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_recording" />

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/stop"
        app:layout_constraintLeft_toRightOf="@id/play_btn"
        app:layout_constraintStart_toEndOf="@+id/play_btn"
        app:layout_constraintTop_toBottomOf="@id/time_recording" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="6dp"
        android:minHeight="6dp"
        android:progress="50"
        android:layout_marginTop="30dp"
        android:progressDrawable="@drawable/seek_bar_ruler"
        android:thumb="@drawable/seek_bar_slider"
        app:layout_constraintTop_toBottomOf="@id/stop_btn" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/_00_00"/>



</androidx.constraintlayout.widget.ConstraintLayout>